<resources>
    <string name="app_name">FlagMaster</string>
    <string name="nav_1">Learn</string>
    <string name="nav_2">Quiz</string>
    <string name="nav_3">Leaderboard</string>
    <string name="nav_4">Profile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_learn">Learn</string>
    <string name="title_profile">Profile</string>

    //Firebase Database field
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_setting">user_account_setting</string>
    <string name="field_username">username</string>
    <string name="field_name">name</string>
    <string name="database_url">"infs3634-flagmaster-app-default-rtdb.asia-southeast1.firebasedatabase.app/"</string>
    <string name="about">FlagMaster aims to provide users with a clear and accessible learning platform
        to learn about different flags and have a diverse understanding of countries’ geography.
        The application focuses on bringing an interactive, engaging, and personalized way for users
        to learn flags in the form of gamification, rather than the traditional flag dictionary
        showing just the listed content. </string>
    <string name="important">Important: You need an internet connection to use FlagMaster.</string>
    <string name="instruction1">
Click the Quiz button in the navigation bar \n
        --> Choose a continent you wish to be quizzed \n
        --> Choose the type of quiz you wish to complete.</string>
    <string name="instruction2">
Click the Learn button in the navigation bar \n
        --> Click the icon on the top right corner of the screen to sort countries by name or region \n
        --> Choose a country you want to get more information.</string>
    <string name="instruction3">
Click the Profile button in the navigation bar \n
        --> Click the Settings button on the top right corner \n
        --> Edit your details \n
        --> Save changes.</string>
    <string name="arcLink">"https://www.arc.unsw.edu.au/clubs/club-admin/clubs-communities/new-international-cultural-clubs-community"</string>

</resources>