<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/quiz"
        android:enabled="true"
        android:icon="@drawable/quiz_icon"
        android:title="@string/nav_2"
        app:itemIconSize="2dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/learn"
        android:enabled="true"
        android:icon="@drawable/explore_icon"
        android:title="@string/nav_1"
        app:itemIconSize="20dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/nav_4"
        app:itemIconSize="2dp"
        app:showAsAction="always" />
</menu>